--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,24 @@
 title: 노동자 연대 웹마스터
-description: 
-show_downloads: false
-google_analytics: 
-plugins: 
-  - jekyll-paginate
-  - jekyll-sitemap
+author: 노동자 연대 웹마스터 
+email: left21wm@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  노동자 연대 기술 블로그입니다.
+twitter_username: 
+github_username: left21wm
+
+# Minima date format
+# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
+minima:
+  date_format: "%Y-%m-%d"
+
+# If you want to link only specific pages in your header, uncomment
+# this and add the path to the pages in order as they should show up
+#header_pages:
+# - about.html
+
+# Build settings
+markdown: kramdown
+theme: minima
+exclude:
+  - Gemfile
+  - Gemfile.lock
