--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   노동자 연대 기술 블로그입니다.
 twitter_username: 
 github_username: left21wm
+google_analytics: UA-7948628-1
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
